--- a/backend/package.json
+++ b/backend/package.json
@@ -4,13 +4,31 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon ./app.js"
   },
   "author": "carelesspark",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.5",
+    "bcrypt": "^5.1.0",
+    "connect-session-sequelize": "^7.1.7",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "path": "^0.12.7"
+    "express-generator": "^4.16.1",
+    "express-mysql-session": "3.0.0",
+    "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.0",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.3.3",
+    "nodemailer": "^6.9.1",
+    "nunjucks": "^3.2.3",
+    "path": "^0.12.7",
+    "sequelize": "^6.31.1",
+    "sequelize-cli": "^6.6.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
